fix: RTL-issues with spacing and placement of icons/menus/buttons (#6692)
* fix: Use RTL-compatible `gap` instead of `space`

AB#34836

* fix: Remove duplicate translation-unit

* fix: Add extra-check for development-mode

* docs: Explain how to run multiple languages side-by-side (in development)

AB#34376

* fix: Overrides of Progress-Spinner + remove syntax-issue in scss with #{!important}

* fix: Remove syntax-issue by being more explicit in what property needs !important

* fix: Position auto-complete dropdown at correct reading-direction-position

AB#35077

* fix: More tweaking of alignment of buttons etc

* fix: Make sure icon is in correct position for reading-order

AB#34825

* fix: Make sure the 'logo' stays in one piece

AB#35068

* fix: change expected header text in e2e test

---------

--- a/interfaces/Portalicious/src/styles.scss
+++ b/interfaces/Portalicious/src/styles.scss
@@ -86,7 +86,9 @@ svg-icon svg {
 
   li {
     .mention-item {
-      @apply py-2 text-start font-semibold text-black txt-body-m #{!important};
+      @apply text-start font-semibold txt-body-m;
+      @apply text-black !important; // Specific @apply-rule to be able to use !important, without SCSS-syntax #{!important}
+      @apply py-2 !important; // Specific @apply-rule to be able to use !important, without SCSS-syntax #{!important}
     }
 
     &.mention-active {
@@ -96,6 +98,11 @@ svg-icon svg {
         background: inherit !important;
       }
     }
+  }
+
+  // Move the menu from the hard-coded LTR-position to the RTL reading-direction
+  &:dir(rtl) {
+    transform: translateX(-100%);
   }
 }
 
@@ -331,8 +338,11 @@ svg-icon svg {
     }
   }
 
-  .p-progress-spinner-svg .p-progress-spinner-circle {
-    @apply stroke-purple-700 #{!important};
+  .p-progressspinner {
+    --p-progressspinner-color-1: theme('colors.purple.700');
+    --p-progressspinner-color-2: theme('colors.purple.700');
+    --p-progressspinner-color-3: theme('colors.purple.700');
+    --p-progressspinner-color-4: theme('colors.purple.700');
   }
 
   .p-toast {
